Registering RawInput implemented

--- a/Tray/Tray.csproj
+++ b/Tray/Tray.csproj
@@ -7,7 +7,12 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>False</UseWPF>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RawInput\RawInput.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="PresentationCore">
